343 - Revert back location-pattern property instead of base-path when reading workflows from filesystem